fix: Hide desktop layout on mobile viewports

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -3,19 +3,9 @@
   margin-left: var(--margin-left-sect);
 }
 
-/* .preview-img-container {
-  overflow: hidden;
-  display: block;
+.project-container-desktop {
+  display: none;
 }
-
-.preview-img {
-  height: 15rem;
-  max-width: 30rem;
-  opacity: 25%;
-  display: block;
-  transform-origin: top;
-  filter: saturate(20%) contrast(40%);
-} */
 
 @media (min-width: 1024px) {
   .project-container-mobile {
@@ -29,6 +19,10 @@
   .project-list-container {
     border-right: 2px dashed rgba(255, 255, 255, 0.2);
     padding-right: 2rem;
+  }
+
+  .project-list {
+    white-space: nowrap;
   }
 
   .project-title:hover {
@@ -49,7 +43,7 @@
 
   .preview-img-container {
     width: 40rem;
-		height: 25rem
+    height: 25rem;
   }
 
   .preview-img {
